--- a/app/src/main/res/layout/fragment_fist.xml
+++ b/app/src/main/res/layout/fragment_fist.xml
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="percentage"
+        android:text="percent age"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/ivHeartPercentage"
@@ -94,7 +94,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/pink"
         android:paddingHorizontal="20dp"
-        android:text="try_again"
+        android:text="try again"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="16sp"
